--- a/js problems.html
+++ b/js problems.html
@@ -114,14 +114,14 @@
 
 
 
-/*
+
   let array=["cat","tiger","praveen","lion"];
 
   function name(a,b){
 
     return array.sort((a,b)=>a.length-b.length);
   }
-  console.log(name());*/
+  console.log(name());
 
 
   
@@ -383,7 +383,7 @@ vowels()
 
  
 
-//32. Reverse a number using while Loop
+
 //reverse string
 
 var str="PRAVEEN";
@@ -391,34 +391,7 @@ console.log(str);
 var output=str.split('').reverse().join('');
 console.log(output);
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-   </script>
+</script>
     
 </body>
 </html>
